<!--
  ~ Copyright (C) 2018  José Miguel García Urrutia <josemgu91@gmail.com>
  ~
  ~ This file is part of HabitTune.
  ~
  ~ HabitTune is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ HabitTune is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name" translatable="false">HabitTune</string>

    <string name="menu_navigation_main_schedule">Schedule</string>
    <string name="menu_navigation_main_routines">Routines</string>
    <string name="menu_navigation_main_activities">Activities</string>
    <string name="menu_navigation_main_statistics">Statistics</string>
    <string name="menu_navigation_main_settings">Settings</string>
    <string name="menu_navigation_main_help">Help</string>
    <string name="menu_navigation_open_drawer">Open navigation drawer</string>
    <string name="menu_navigation_close_drawer">Close navigation drawer</string>

    <string name="menu_delete_items">Delete Items</string>

    <string name="activities_title">Activities</string>
    <string name="activities_empty">You don\'t have activities yet!</string>
    <string name="activities_delete_dialog_title">Delete Activity?</string>
    <string name="activities_delete_dialog_content">We\'ll delete this activity and remove it from all of your routines. Your routines and tags won\'t be deleted but this activity statistics will be gone forever.</string>

    <string name="new_activity_title">New Activity</string>
    <string name="new_activity_error_empty_name">Name must not be empty.</string>
    <string name="new_activity_hint_activity_name">Activity Name</string>
    <string name="new_activity_hint_activity_description">Description</string>
    <string name="new_activity_label_activity_color">Color</string>
    <string name="new_activity_hint_activity_color">Color</string>
    <string name="new_activity_hint_activity_tags">Tags&#8230;</string>
    <string name="new_activity_action_create">Save</string>

    <string name="update_activity_title">Update Activity</string>
    <string name="update_activity_action_update">Update</string>

    <string name="tag_editor_title">Tags</string>
    <string name="tag_editor_tag_hint">Enter tag name</string>
    <string name="tag_editor_tag_create">Create \"%s\"</string>
    <string name="tag_editor_delete_dialog_title">Delete tag?</string>
    <string name="tag_editor_delete_dialog_content">We\'ll delete this tag and remove it from all of your activities. Your activities won\'t be deleted.</string>

    <string name="routines_title">Routines</string>
    <string name="routines_empty">You don\'t have routines yet!</string>
    <string name="routines_delete_dialog_title">Delete Routine?</string>
    <string name="routines_delete_dialog_content">We\'ll delete this routine. Your activities won\'t be deleted.</string>

    <string name="new_routine_title">New Routine</string>
    <string name="new_routine_error_empty_name">Name must not be empty.</string>
    <string name="new_routine_hint_routine_name">Routine Name</string>
    <string name="new_routine_hint_routine_description">Description</string>
    <string name="new_routine_number_of_days">Number of days: %s</string>
    <string name="new_routine_label_routine_color">Color</string>
    <string name="new_routine_hint_routine_color">Color</string>
    <string name="new_routine_create">Save</string>

    <string name="update_routine_title">Update Routine</string>
    <string name="update_routine_action_update">Update</string>

    <string name="routine_editor_title">Routine Editor</string>
    <string name="routine_editor_empty">Add activities for this day.</string>
    <string name="routine_editor_element_overflow_button">More options&#8230;</string>
    <string name="routine_editor_element_delete">Delete</string>
    <string name="routine_editor_action_update_routine">Update</string>

    <string name="add_routine_entry_title">Assign Activity</string>
    <string name="add_routine_error_no_activity">You must add an activity.</string>
    <string name="add_routine_entry_action_add">Assign</string>
    <string name="add_routine_entry_hint_select_activity">Select an activity.</string>
    <string name="add_routine_entry_start_hour">Start</string>
    <string name="add_routine_entry_end_hour">End</string>

    <string name="update_routine_entry_title">Update Activity</string>
    <string name="update_routine_entry_action_update">Update</string>

    <string name="activity_selection_title">Select an Activity</string>

    <string name="schedule_title">Schedule</string>
    <string name="schedule_empty">You don\'t have activities for today.</string>

    <string name="settings_title">Settings</string>
    <string name="settings_create_backup">Create Backup</string>
    <string name="settings_create_backup_summary">Creates a backup file.</string>
    <string name="settings_import_backup">Import Backup</string>
    <string name="settings_import_backup_summary">Imports an existing backup file.</string>
    <string name="settings_about">About</string>
    <string name="settings_about_summary">Shows the about screen.</string>
    <string name="settings_error_file_explorer">Can\'t open file explorer.</string>
    <string name="settings_error_create_backup">Can\'t create backup file.</string>
    <string name="settings_error_import_backup">Can\'t import backup file. Invalid format.</string>

    <string name="statistics_title">Statistics</string>
    <string name="statistics_pie_up_to_date">Updated to: %s</string>
    <string name="statistics_pie_events_total">Total events: %d.</string>
    <string name="statistics_pie_events_completed_label">Completed events</string>
    <string name="statistics_pie_events_missed_label">Missed events</string>
    <string name="statistics_pie_variation_average_label">Average variation:</string>
    <string name="statistics_pie_variation_start">Start: &#177;%d minutes.</string>
    <string name="statistics_pie_variation_end">End: &#177;%d minutes.</string>
    <string name="statistics_action_export_to_csv">Export to CSV</string>
    <string name="statistics_error_file_explorer">Can\'t open file explorer.</string>
    <string name="statistics_error_exporting_csv">Can\'t export to CSV file.</string>

    <string name="widget_statistics_content_description">Statistical graphics.</string>
    <string name="widget_statistics_notification_update_title">Statistics Widget</string>
    <string name="widget_statistics_notification_update_content">Updating&#8230;</string>
    <string name="widget_statistics_error_activity_deleted">The Activity was deleted!</string>

    <string name="help_title">Help</string>
    <string-array name="help_titles">
        <item>HabitTune</item>
        <item>Create activities</item>
        <item>Create routines</item>
        <item>Add activities</item>
        <item>Register your daily times</item>
    </string-array>
    <string-array name="help_descriptions">
        <item>Make, strength and tune your habits!</item>
        <item>Go to the Activities section and add your daily activities.</item>
        <item>Go to the Routines section and add your routines.</item>
        <item>Add activities to your routines.</item>
        <item>Mark the start and end times of your daily activities.</item>
    </string-array>

    <string name="notification_channel_widget_update">Widget Updates</string>

    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>

</resources>
