<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018  José Miguel García Urrutia <josemgu91@gmail.com>
  ~
  ~ This file is part of HabitTune.
  ~
  ~ HabitTune is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ HabitTune is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/layoutMarginBottom"
        android:paddingEnd="@dimen/layoutMarginEnd"
        android:paddingStart="@dimen/layoutMarginStart"
        android:paddingTop="@dimen/layoutMarginTop">

        <TextView
            android:id="@+id/textViewSelectAnActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/editTextBackground"
            android:hint="@string/add_routine_entry_hint_select_activity"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="?attr/editTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLabelStartHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/add_routine_entry_start_hour"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/textViewStartHour"
            app:layout_constraintEnd_toStartOf="@+id/textViewStartHour"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewStartHour" />

        <TextView
            android:id="@+id/textViewStartHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/editTextBackground"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="?attr/editTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelStartHour"
            app:layout_constraintTop_toBottomOf="@+id/textViewSelectAnActivity"
            tools:text="00:00" />

        <TextView
            android:id="@+id/textViewLabelEndHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/add_routine_entry_end_hour"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/textViewEndHour"
            app:layout_constraintEnd_toStartOf="@+id/textViewEndHour"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewEndHour" />

        <TextView
            android:id="@+id/textViewEndHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/editTextBackground"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="?attr/editTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelEndHour"
            app:layout_constraintTop_toBottomOf="@+id/textViewStartHour"
            tools:text="00:00" />

    </android.support.constraint.ConstraintLayout>
</layout>